--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /**{
   border:1px solid red;
 }*/
+a{
+  text-decoration: none;
+}
 
 .round {
   border-radius: 50%;
@@ -47,4 +50,23 @@
 .btn{
   text-align: center;
   
+}
+
+.stats{
+  list-style: none;
+}
+
+.stats li{
+  float:left;
+  width:40px;
+  height:40px;
+  border:1px solid #aaa;
+  border-radius: 50%;
+  font-size: 18px;
+  padding:6px 0 0 14px;
+  margin:0 5px;
+}
+
+.stats .active{
+  background-color:blue;
 }
